# EvaluationDetection

./: CMakeLists.txt
Results/: DT_BSubObsTwoEasy_FPS.xlsx  DT_BSubObsTwoEasy_results  DT_HEUObsTwoEasy_results
Results/Backup/DT/: DT_YoloObsFourMed_results  DT_YoloObsSingleStatic  DT_YoloObsSingleStatic_results
Results/Backup/DT/Bsub/: DT_BSubObsRemoteInt2  DT_BSubObsTwoEasy_FPS  DT_HWOut3Easy_results  DT_ObsRemoteInt2_results  DT_ObsTwoEasy_results  TLOSRemoteInt2_results
Results/Backup/DT/HEU/: DT_HEUObsTwoEasy_FPS  DT_HEUObsTwoEasy_results  DT_HEUTLOSRemoteInt2  DT_HWOut3Easy_results  DT_ObsRemoteInt2_results  DT_TLOSRemoteInt2_results
Results/Backup/DT/Yolo/: DT_HWOut3Easy_results  (+7 more)
Results/DT/: DT_YoloObsFourMed_FPS  DT_YoloObsSingleStatic_FPS
Results/DT/Bsub/: DT_BSubHWOut3Easy  DT_BSubHWOut3Easy_results  DT_BSubObsRemoteInt2_results  DT_BSubObsTwoEasy  DT_BSubObsTwoEasyCombine_results  DT_BSubObsTwoEasy_results  DT_BSubTLOSRemoteInt2  DT_BSubTLOSRemoteInt2_results
Results/DT/HEU/: DT_HEUHWOut3Easy  DT_HEUHWOut3Easy_results  DT_HEUObsRemoteInt2  DT_HEUObsRemoteInt2_results  DT_HEUObsTwoEasy  DT_HEUObsTwoEasyCombine_results  DT_HEUObsTwoEasy_results  DT_HEUTLOSRemoteInt2_results
Results/DT/Yolo/: DT_YoloHWOut3Easy_results  DT_YoloObsRemoteInt2_cost100  DT_YoloObsRemoteInt2_results  DT_YoloObsRemoteInt2_searchRadiiChange  DT_YoloObsTwoEasyCombine_results  DT_YoloObsTwoEasy_results  DT_YoloTLOSRemoteInt2_results
Results/GT/: GT_HWOut3Easy.txt  GT_ObsRemoteInt2.txt  GT_ObsTwoEasyFinal.txt  GT_TLOSRemoteInt2.txt
src/: eval.cpp  eval.h  main.cpp
